# inria_hbrs

./: README.md
environments/hbrs_gazebo_objects/: CMakeLists.txt~  package.xml
environments/hbrs_gazebo_objects/Media/models/: corrogated_box.dae
environments/hbrs_gazebo_objects/launch/: initial_setup.launch  initial_setup.launch~  setup_1.launch  setup_2.launch  setup_2.launch~  use_case_one.launch~  use_case_one_2.launch  use_case_one_2.launch~
environments/hbrs_gazebo_objects/objects/: ball.urdf  chair_wicker.urdf  corrogated_box.urdf  couch_small.urdf~  couchl.urdf  door.urdf  door_white.urdf~  table_tv.urdf  wall_HUGE.urdf~  wall_LARGE.urdf~  wall_huge.urdf~  wall_large.urdf~  wall_medium.urdf~  wall_small.urdf~  wall_tiny.urdf~
environments/hbrs_gazebo_objects/objects (copy)/: box_wicker.urdf  box_wood.urdf~  chair_wicker.urdf  corrogated_box.urdf  corrogated_box.urdf~  couchs.urdf  stool.urdf  stool.urdf~  table_tv.urdf  table_tv.urdf~  wall_HUGE.urdf  wall_LARGE.urdf  wall_big.urdf~  wall_huge.urdf~  wall_large.urdf  wall_normal.urdf~  wall_small.urdf  wall_tiny.urdf~
inria_hbrs/semantic_navigation/move_robot/: CMakeLists.txt  CMakeLists.txt~  package.xml
inria_hbrs/semantic_navigation/move_robot/cfg/: MoveBase.cfg  MoveBase.cfg~  MoveRobot.cfg
inria_hbrs/semantic_navigation/move_robot/src/: configuration.cpp  global_planner.cpp  goal.cpp  local_planner.cpp  move_robot.cpp  move_robot.cpp~  move_robot_configuration.cpp  move_robot_miscellaneous.cpp  move_robot_node.cpp
perception/: CMakeLists.txt  package.xml~
perception/config/: perception_params.yaml
perception/data/: monsters.yaml~  test.yaml  test.yaml~  test1.yaml  test1.yaml~  write_test.yaml  write_test.yaml~
perception/include/perception/: 2DOBB.h  Vector2.h  dummy_data.h  dummy_perception.h  dummy_perception_copy.h  gazebo_ros_objects_state_publisher.h
perception/launch/: dummy_perception_node.launch~
perception/msg/: ObjectState.msg~  ObjectsState.msg
perception/plugins/: gazebo_ros_objects_state_publisher.cpp  gazebo_ros_objects_state_publisher.cpp~  hello.world~  hello_world.cc  hello_world.cc~  model_push.cc  model_push.cc~  model_push.world~  perception_simulation.cc  perception_simulation.h~  world_state_publisher.cpp  world_state_publisher.cpp~  world_state_publisher.h  world_state_publisher.h~
perception/src/: dummy_perception _copy.cpp  dummy_perception.cpp  dummy_perception.cpp~  dummy_perception_node.cpp  knowledge.cpp  monsters.yaml~  read_yaml.cpp  test.cpp  test.cpp~  test_1.cpp  test_1.cpp~  write_yaml.cpp  write_yaml.cpp~  write_yaml_2.cpp  write_yaml_2.cpp.cpp~  write_yaml_2.cpp~
robots/robots/: package.xml
semantic_navigation/knowledge_base/semantic_map/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py
semantic_navigation/knowledge_base/semantic_map/data/: dynamic_objects.yaml  dynamic_objects.yaml~  heavy_objects.yaml  heavy_objects.yaml~  light_objects.yaml  light_objects.yaml~  region.yaml~  regions.yaml~  structural_objects.yaml  structural_objects.yaml~
semantic_navigation/knowledge_base/semantic_map/launch/: move_object_goal.launch~  query_test_node.launch  semantic_map_node.launch~  semantic_map_publisher.launch~
semantic_navigation/knowledge_base/semantic_map/msg/: BoundingBox.msg  CostmapLayer.msg~  Goal.msg~  SemanticProperties.msg~
semantic_navigation/knowledge_base/semantic_map/scripts/: all_query_server_node.py  all_query_server_node.py~  move_object_client_test.py~  move_object_server.py~  regions.py~  semantic_map_query_response.py~  semantic_map_response.py~  semantic_map_ros.py
semantic_navigation/knowledge_base/semantic_map/src/: client_library.cpp~  query_test_node.cpp~  semantic_map.cpp  semantic_map.cpp~  semantic_map_publisher.cpp  semantic_map_query_test.cpp  semantic_map_query_test.cpp~
semantic_navigation/knowledge_base/semantic_map/srv/: QueryEntityInstances.srv~  QueryRegionInstances.srv~
semantic_navigation/move_object/move_object/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
semantic_navigation/move_object/move_object_actions/: CMakeLists.txt  CMakeLists.txt~  package.xml~
semantic_navigation/move_object_actions/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py~
semantic_navigation/move_object_actions/config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  global_costmap_params.yaml~  local_costmap_params.yaml~
semantic_navigation/move_object_actions/launch/: move_object_actions.launch  move_object_actions.launch~
semantic_navigation/move_object_actions/msg/: Goal.msg  MoveObjectGoal.msg
semantic_navigation/move_object_actions/src/: extra.cpp  push_action.cpp  push_action_node.cpp  push_action_node.cpp~  push_object.cpp~  tap_action.cpp  tap_action_node.cpp  test_action.cpp  test_node.cpp
semantic_navigation/move_robot_action/: CMakeLists.txt~  package.xml  package.xml~
semantic_navigation/move_robot_action/config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml~
semantic_navigation/move_robot_action/launch/: move_robot_action.launch  move_robot_action.launch~
semantic_navigation/move_robot_action/src/: move_robot_action.cpp  move_robot_action_node.cpp  move_robot_action_node.cpp~
semantic_navigation/semantic_navigation_planner/: CMakeLists.txt  CMakeLists.txt~  package.xml~
semantic_navigation/semantic_navigation_planner/src/: compute_best_path.cpp  compute_best_path.cpp~  compute_best_path_node.cpp  constraints.cpp  constraints.cpp~  constraints_node.cpp  reasoner.cpp  semantic_planner.cpp  semantic_planner_node.cpp  semantic_planner_node.cpp~  semantic_planner_node_test.cpp~
semantic_navigation/semantic_planner/semantic_planner_global/: CMakeLists.txt  CMakeLists.txt~  bgp_plugin.xml  note.txt  note.txt~  package.xml  package.xml~  semantic_dijkstra.cpp  semantic_dijkstra.h
semantic_navigation/semantic_planner/semantic_planner_local/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+455 files in other folders)
