<package>
  <name>hbrs_gazebo_objects</name>
  <version>0.6.2</version>
  <description>This package provides some objects for gazebo simulation.</description>
  
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_gazebo_objects</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="niranjan.deshpande187@gmail.com">Niranjan Vilas Deshapnde</maintainer>
  <author email="niranjan.deshpande187@gmail.com">Niranjan Vilas Deshapnde</author>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>convex_decomposition</run_depend>
  <run_depend>ivcon</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>xacro</run_depend>
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
