<?xml version="1.0"?>
<package>
<name>robots</name>
<version>0.1.0</version>
<description>ROS metapackage for description about different robots</description>
<license>GPLv3</license>
<author email="niranjan.deshpande187@gmail.com">Niranjan Deshpande</author>
<maintainer email="niranjan.deshpande187@gmail.com">Niranjan Deshpande</maintainer>
<buildtool_depend>catkin</buildtool_depend>
<export>
<metapackage/>
</export>
</package>
